# Flask-Admin-Dashboard

./: app.py  pyproject.toml  requirements.txt  sample_db.sqlite
static/js/pages/: dashboard.js
templates/: index.html  my_master.html
templates/admin/: base.html  index.html  layout.html
templates/admin/model/: list.html
