[tool.poetry]
name = "flask-admin-dashboard"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask-SQLAlchemy = "^2.4"
flask-security-too = "^3.2"
flask-admin = {git = "https://github.com/flask-admin/flask-admin.git", branch="bootstrap4"}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
